[package]
name = "dependent_view"
description="Wrappers to produce weak trait objects from reference types"
categories=["memory-management","rust-patterns"]
keywords=["weak","rc","trait","trait-object"]
readme="README.md"
repository="https://github.com/gopiandcode/dependent-view"
license="MIT"
version = "1.0.2"
authors = ["Gopiandcode (https://github.com/gopiandcode)"]

[dependencies]

[lib]
name="dependent_view"
path="src/lib.rs"

